--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,10 @@ dependencies {
     implementation 'com.android.support:cardview-v7:26.1.0'
     implementation 'com.android.support:recyclerview-v7:26.1.0'
 
+
+
+    implementation 'devs.mulham.horizontalcalendar:horizontalcalendar:1.1.7'
+
     implementation 'com.squareup.picasso:picasso:2.71828'
 
     implementation 'me.tankery.lib:permission-requester:1.0.0'
