--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,5 +60,7 @@ dependencies {
     implementation 'com.github.florent37:shapeofview:1.0.6'
     implementation 'me.relex:circleindicator:1.2.2@aar'
 
+    implementation 'com.github.florent37:shapeofview:1.1.2'
+
 }
 apply plugin: 'com.google.gms.google-services'
